--- a/src/tp2_lp/AdmUI.form
+++ b/src/tp2_lp/AdmUI.form
@@ -117,6 +117,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Listar orcamentos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOrcamentosActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnVoltar">
       <Properties>
