--- a/src/tp2_lp/ProfUI.form
+++ b/src/tp2_lp/ProfUI.form
@@ -85,6 +85,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Meus pedidos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOrcamentosActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnVoltar">
       <Properties>
